fix animations on safari

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -14,6 +14,10 @@ html,body {
   min-height: 100vh;
 }
 
+.liquid-child {
+  top: auto !important;
+}
+
 .bg {
   transition: background 0.5s ease;
 }
